--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "techscraper",
   "version": "1.0.0",
-  "description": "",
+  "description": "TDD Typescript (+ debugger) PhantomJS",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "tslint ./src/**/*.ts",
-    "fix": "tslint --fix ./src/**/*.ts",
-    "start": "ts-node src/index.ts"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "build": "tsc",
+    "build:watch": "tsc --watch"
   },
   "repository": {
     "type": "git",
@@ -21,12 +21,14 @@
   },
   "homepage": "https://github.com/g-du-1/TechScraper#readme",
   "dependencies": {
-    "@types/node": "^18.7.18",
-    "@types/puppeteer": "^5.4.6",
-    "puppeteer": "^18.0.0",
-    "ts-node": "^10.9.1"
+    "puppeteer": "^18.0.4"
   },
   "devDependencies": {
+    "@types/jest": "^29.0.3",
+    "@types/node": "^18.7.18",
+    "@types/puppeteer": "^5.4.6",
+    "jest": "^29.0.3",
+    "ts-jest": "^29.0.1",
     "typescript": "^4.8.3"
   }
 }
