--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/g-du-1/TechScraper#readme",
   "dependencies": {
+    "jest-puppeteer": "^6.1.1",
     "puppeteer": "^18.0.4"
   },
   "devDependencies": {
@@ -29,6 +30,7 @@
     "@types/puppeteer": "^5.4.6",
     "jest": "^29.0.3",
     "ts-jest": "^29.0.1",
+    "ts-jest-puppeteer": "^0.0.5",
     "typescript": "^4.8.3"
   }
 }
